--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "swagger-ui-express": "^4.1.6"
   }
 }
