--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "mysql": "^2.18.1",
     "swagger-ui-express": "^4.1.6"
   }
 }
